assets/css/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

:root {
  --primary-color: rgb(154, 226, 22);
  --secondary-color: #024e76;
  --tertiary-color: #39a6b2;
}

body {
    font-family: Arial, Helvetica, sans-serif;
}

header {
  z-index: 9999;
  position: sticky;
  top: 0;
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  padding: 20px 35px;
  background-color: var(--tertiary-color);
  background-image: url("../images/mixer.jpg");
  background-size: 140%;
  background-position: top;
  background-attachment: fixed;
  background-position: 40%; 
}

header h1 {
  font-weight: bold;
  margin: 0;
  font-size: 36px;
  color: var(--primary-color);
  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}

header a {
  text-decoration: none;
  color: var(--primary-color);
}

header nav {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  margin: 7px 0;
}

header nav ul {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
  list-style: none;
}
  
header nav ul li a {
  padding: 10px 15px;
  font-weight: lighter;
  font-size: 1.55vw;
  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}

header nav ul li a:hover {
  background: var(--primary-color);
  color: var(--secondary-color);
  border-radius: 15px;
  text-shadow: none;
}

section {
  padding: 60px;
}

/* Hero Style Start */
.hero {
  align-items: flex-start;
  display: flex;
  justify-content: centerr;
  flex-wrap: wrap;
  background-image: url("../images/mixer.jpg");
  background-size: 140%;
  background-position: top;
  background-attachment: fixed;
  background-position: 40%;
}

.hero-form {
 width: 40%;
 margin: 3.5%;
 border: 3px solid var(--secondary-color);
 background-color: silver;
 padding: 20px;
 box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 border-radius: 15px;
}

.hero-form h3 {
 font-size: 24px;
 margin: 0;
}
  
.hero-form p {
 margin: 5px 0 15px 0;
}
  
.form-input {
 border: 1px solid var(--secondary-color);
 display: block;
 padding: 7px 15px;
 font-size: 16px;
 color: var(--secondary-color);
 width: 100%;
 margin-bottom: 15px;
 border-radius: 10px;
 background-color: rgba(255,255,255, 0.75);
}

.form-input:focus {
  background-color: rgba(255,255,255, 1);
  outline: none;
}

.hero-form button {
 color: var(--primary-color);
 background-color: var(--secondary-color);
 border: none;
 padding: 10px 20px;
 font-size: 16px;
 border-radius: 10px;
}

.hero-form button:hover {
  background-color: var(--primary-color);
  color: var(--secondary-color);
}

  /* Hero Call to Action */
.hero-cta {
  width: 35%;
  text-align: right;
  margin: 3.5%;
  color: #fff;
  font-size: 18px;
  line-height: 1.2;
}

.hero-cta h2 {
  font-style: italic;
  font-size: 55px;
  color: var(--primary-color);
  text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
}

.checkbox-wrapper input, .radio-wrapper input {
  opacity: 0;
}

.checkbox-wrapper label, .radio-wrapper label {
  position: relative;
  left: 10px;
  margin: 10px;
  line-height: 1.6;
}

.checkbox-wrapper label::before, .radio-wrapper label::before {
  content: "";
  height: 20px;
  width: 20px;
  background: rgba(255, 255, 255, 0.75);  
  border: 1px solid var(--secondary-color);  
  position: absolute;
  top: -4px;
  left: -30px;
}

.radio-wrapper label::before {
  border-radius: 50%;
}

.radio-wrapper label::after {
  content: "";
  width: 20px;
  height: 20px;
  border-radius: 50%;
  background: var(--secondary-color);
  position: absolute;
  left: -29px;
  top: -3px;
  background-image: radial-gradient(circle, var(--tertiary-color), var(--secondary-color));
}

.checkbox-wrapper label::after {
  content: "";
  height: 6px;
  width: 14px;
  border-left: 2px solid var(--secondary-color);
  border-bottom: 2px solid var(--secondary-color);
  position: absolute;
  left: -26px;
  top: 1px;
  transform: rotate(-58deg);
}

.checkbox-wrapper input + label::after, 
.radio-wrapper input + label::after {
  content: none;
}

.checkbox-wrapper input:checked + label::after, 
.radio-wrapper input:checked + label::after {
  content: "";
}
  /* Hero Style End */

 .section-title {
  padding-bottom: 20px;
  text-align: center;
  margin: 0 auto 35px auto;
  width 50%;
  font-size: 48px;
  border-bottom: 3px solid;
  color: var(--secondary-color);
}

.primary-border {
  border-color: var(--primary-color);
}

.secondary-border {
  border-color: var(--tertiary-color);
}

.intro p {
  text-align: center;
  margin: 0 auto;
  line-height: 1.7;
  color: var(--tertiary-color);
  width: 80;
  font-size: 20px;
}

.steps {
  background: var(--secondary-color);
}

.step h3 {
  flex: 1 30%;
  color:var(--primary-color);
  font-size: 46px;
}

.step-info {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  flex: 2 70%;
}

.step-text p {
  color:var(--primary-color);
  font-size: 18px;
}

.step-text h4 {
  font-size: 26px;
  line-height: 1.5;
  color:var(--primary-color);
}

.step-img {
  flex: 1 12%;
  margin-right: 20px;
}

.step-img img {
  max-width: 100%;
}

.step-text {
  flex: 12;
}

.step {
  margin: 50px auto;
  padding-bottom: 50px;
  width: 80%;
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
}

.step:not(:last-child) {
  border-bottom: 1px solid var(--tertiary-color);
}

.trainers {
  width: 100%;
  margin: 0 auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
}

.trainer {
  flex: 1;
  margin: 20px;
  background: var(--secondary-color);
  color: var(--primary-color)
}

.trainer img {
  width: 100%;
}
  
.trainer-bio {
  padding: 25px;
  line-height: 1.3;
}
  
.trainer-bio h3 {
  font-size: 28px;
}
  
.trainer-bio h4 {
  font-weight: lighter;
  font-size: 22px;
  margin-bottom: 15px;
}
  
.trainer-bio p {
  font-size: 17px;
}

.contact {
  background: var(--secondary-color);
}

.contact h2 {
  color: var(--primary-color);
}

.contact-info {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.contact-info iframe {
  height: 400px;
}
  
.contact-info div {
  color: white;
}

.contact-info h3 {
  color: var(--primary-color);
  font-size: 32px;
}
  
.contact-info p, .contact-info address {
  margin: 20px 0;
  line-height: 1.5;
  font-size: 16px;
  font-style: normal;
}
  
.contact-info a {
  color: var(--primary-color);
}

.contact-form input, .contact-form textarea {
  border: 1px solid var(--secondary-color);
  display: block;
  padding: 7px 15px;
  font-size: 16px;
  color: var(--secondary-color);
  width: 100%;
  margin-bottom: 15px;
  margin-top: 5px;
  border-radius: 10px;
  background-color: rgba(255,255,255, 0.75);
}

.contact-form input:focus, .contact-form textarea:focus {
  background-color: rgba(255,255,255, 1);
  outline: none;
}

.contact-form button {
  width: 100%;
  border: none;
  background: var(--primary-color);
  color: var(--secondary-color);
  text-align: center;
  padding: 15px 0;
  font-size: 16px;
  border-radius: 10px;
}

.contact-form button:hover {
  color: var(--primary-color);
  background: var(--tertiary-color);
}

.text-left {
  text-align: left;
}
  
.text-right {
  text-align: right;
}

.flex-row {
  display: flex;
}

footer {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
  background: var(--primary-color);
  width: 100%;
  padding: 40px 35px;
}

footer h2 {
    color: var(--secondary-color);
    font-size: 30px;
    margin: 0;
}

footer div {
  line-height: 1.5;
  text-align: right;
}

footer a {
  color: var(--secondary-color);
}

/* media query styles */
@media screen and (max-width: 980px) {
  header {
    padding-bottom: 0;
    justify-content: center;
    position: relative
  }

  header h1 {
    width: 100%;
    text-align: center;
  }

  header nav ul {
    margin-top: 20px;
    width: 100%;
    justify-content: center;
  }

  header nav ul li a {
    font-size: 20px;
  }

  footer h2, footer div {
    text-align: center;
    width: 100%;
  }

  .hero-cta, .hero-form {
    width: 100%;
  }
  
  .hero-cta {
    text-align: center;
  }

  .section-title {
    width: 80%;
  }
  
  .trainer {
    flex: 0 70%;
  }
  
  .contact-info iframe{
    flex: 1 100%;
  }
}

@media screen and (max-width: 768px) {

  section {
    padding: 30px 15px;
  }

  .step h3 {
    flex: 1 100%;
    text-align: center;
  }

  .step-info {
    flex: 2 100%;
    text-align: center;
    justify-content: center;
  }

  .step-img {
    flex: 0 32%;
    margin-right: 0;
    margin-top: 15px;
    margin-bottom: 15px;
  }

  .step-text {
    flex: 100%;  
  }

}

@media screen and (max-width: 575px) {

  .hero-form button {
    width: 100%;
  }

  .section-title {
    width: 95%;
  }

  .intro p {
    width: 100%;
  }

  .trainer {
    flex: 0 100%;
  }

  .contact-info {
    text-align: center;
  }

  .contact-info > * {
    flex: 0 100%;
  }

  .contact-form {
    order: 3;
  }
}

